--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,3 @@
 ---
-dotfiles_repository: git@github.com:kentrino/dotfiles.git
+dotfiles_repository: https://github.com/kentrino/dotfiles.git
 dotfiles_repository_branch: master
